Updated GitHub actions

--- a/.github/workflows/data_quality_pipeline.yml
+++ b/.github/workflows/data_quality_pipeline.yml
@@ -44,7 +44,7 @@ jobs:
 
       - name: Run unit tests
         run: |
-          pytest tests/ -v
+          pytest -m pytest -v
 
       # Push / PR
       - name: Run pipeline (no DB writes)
